--- a/workExperience.css
+++ b/workExperience.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -128,30 +129,36 @@ input:checked + .info {
 }
 
 
-/* NAV BAR -------------------------------------- */
-
 body{
-    background-color: #0e0e0e;
+    background-color: #1e1e1e;
 }
 
 .timeline-area{
-    margin-top: 5vh;
+    position: absolute;
+    top: 16vh;
     margin-left: 5vw;
     width: 55vw;
     border-left: 2px solid #0C0C0C;
     padding: 0 20px 0 30px;
+    z-index: 3;
 }
 .timeline-cell{
     background-color: #0C0C0C;
     padding: 2vh 2vw;
     font-size: 16px;
-    border: 1px solid #0C0C0C;
+    border: 2px solid #0C0C0C;
     line-height: 1.7;
     position: relative;
     height: 110px;
     margin-bottom: 20px;
+    -webkit-transition: all 0.3s ease-in-out;
 }
-
+.timeline-cell:hover{
+    border-radius: 1px;
+    border-color: whitesmoke;
+    cursor: pointer;
+    -webkit-transition: all 0.1 ease-in;
+}
 .timeline-cell::before{
     content: '';
     display: block;
@@ -173,7 +180,7 @@ body{
     border-color: transparent #0C0C0C transparent transparent;
     border-width: 8px;
     position: absolute;
-    left: -17px;
+    left: -19px;
     top: 10px;
 }
 
@@ -199,4 +206,46 @@ body{
     font-size: 18px;
     color: white;
     font-family: 'Bahnschrift', sans-serif;
+}
+
+#details{
+    position: relative;
+}
+
+.details-text{
+    position: absolute;
+    background-color:#0C0C0C; 
+  
+    z-index: 3;
+  
+    top: 5.2vh;
+    width: 32vw; 
+    height: 69vh; 
+    left: 64vw;
+    opacity: 1;
+  
+    display: table;
+    transform: translateX(0vw);
+}
+
+.details-text p{
+    z-index: 3;  
+  
+    margin-top: 5vh; 
+    padding: 1vw; 
+    padding-left: 1vw;
+  
+    font-size: 2.8vh;
+    font-family: 'Bahnschrift';
+    color: white;
+    text-align:start;
+    display: table-cell;
+}
+
+.details-text h1{
+    font-size: 4vh;
+    font-family: 'Bahnschrift';
+    color: white;
+    display: table-cell;
+    margin-left: 1vw;
 }
