--- a/projects.css
+++ b/projects.css
@@ -1,9 +1,32 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
+
+@keyframes background-pan {
+  from {
+    background-position: 0% center;
+  }
+  
+  to {
+    background-position: -200% center;
+  }
+}
+
+:root {
+  --g1: rgb(12, 12, 12);
+  --g2: rgb(22, 22, 22);
+}
+
+body {
+  background-color: #0C0C0C;
+  height: 100vh;
+  overflow: hidden;
+}
 /* NAV BAR ---------------------------------------------- */ 
+
 
 li, a, button, label, .info{
     color: whitesmoke;
@@ -69,7 +92,7 @@ nav{
     order: 2;
 }
 
-button{
+.navButton{
     margin-left: 20px;
     padding: 9px 25px;
     background-color: rgb(98, 0, 234);
@@ -79,7 +102,7 @@ button{
     transition: all 0.3s ease 0s;
 }
 
-button:hover{
+.navButton:hover{
     background-color: rgb(236, 64, 122);
 }
 
@@ -90,42 +113,126 @@ input {
   display: none;
 }
 
-.con {
-  order: 2;
-  cursor: pointer;
-  margin-left: 20px;
-  padding: 9px 25px;
-  background-color: rgb(98, 0, 234);
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-  -webkit-transition: background-color 0.1s, color 0.1s;
-  z-index: 3;
+.wrapper{
+	width: auto;
+	margin: 25px 0;
 }
 
-.con:hover {
-  background-color: rgb(236, 64, 122);
+.wrapper .image_gallery{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
-.info {
-  order: 3;
-  -webkit-transition: width .3s ease;
-  width: 0;
-  overflow: hidden;
-  width: 0vw;
-  background-color: rgb(98, 0, 234);
-  border: none;
-  border-radius: 50px;
-  margin-left: -2vw;
-  min-height: 3.6vh;
-  max-height: 3.6vh;
-  text-align: center;
-  padding-top: 1vh;
-  z-index: 2;
+.wrapper .image_gallery .image_gallery_item{
+	width: 23vw;
+	height: 41.5vh;
+    margin: 5px;
+	cursor: pointer;
+	position: relative;
+    object-fit: cover;
+    object-position: bottom;
 }
 
-input:checked + .info {
-  width: 38vw;
-  overflow: hidden;
+.wrapper .image_gallery .image_gallery_item img{
+	width: 100%;
+	height: 100%;
+    object-fit: cover;
 }
+
+.wrapper .image_gallery .image_gallery_item .gameLink{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.wrapper .image_gallery .image_gallery_item .overlay{
+	width: 100%;
+	height: 100%;
+	background: #1a1a1a21;
+	position: absolute;
+    border-style:solid;
+    border-color:#0C0C0C;
+    border-width:4px;
+
+    backdrop-filter: blur(0px);
+
+	top: 0;
+	left: 0;
+	-webkit-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+}
+
+.wrapper .image_gallery .image_gallery_item .overlay .text{
+	position: absolute;
+	top: 8%;
+	left: 47%;
+	transform: translate(-50%, -50%);
+
+    background-color: #0c0c0c;
+
+    width: 20vw;
+    padding-left: 20px;
+
+    color: whitesmoke;
+    font-weight: 1500;
+    text-decoration: none;
+    font-family: 'Bahnschrift', sans-serif;
+    text-align: left;
+    z-index: 3;
+
+    font-size: 3vh;
+}
+
+.wrapper .image_gallery .image_gallery_item .overlay .infoText{
+	position: absolute;
+	top: 93%;
+	left: 32.5%;
+	transform: translate(-50%, -50%);
+
+    background-color: #0C0C0C;
+
+    width: 13.5vw;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    color: whitesmoke;
+    font-weight: 1500;
+    text-decoration: none;
+    font-family: 'Bahnschrift', sans-serif;
+    text-align: left;
+    z-index: 3;
+
+    font-size: 2.2vh;
+}
+
+.wrapper .image_gallery .image_gallery_item .overlay .date{
+	position: absolute;
+	top: 93%;
+	left: 89%;
+	transform: translate(-50%, -50%);
+
+    background-color: #0C0C0C;
+
+    width: 4vw;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    color: whitesmoke;
+    font-weight: 1500;
+    text-decoration: none;
+    font-family: 'Bahnschrift', sans-serif;
+    text-align: left;
+    z-index: 3;
+
+    font-size: 2.2vh;
+}
+
+.wrapper .image_gallery .image_gallery_item:hover .overlay{
+    backdrop-filter: blur(8px);
+}
+
+
