--- a/workExperience.css
+++ b/workExperience.css
@@ -136,7 +136,7 @@ body{
 .timeline-area{
     position: absolute;
     top: 16vh;
-    margin-left: 5vw;
+    margin-left: 4vw;
     width: 55vw;
     border-left: 2px solid #0C0C0C;
     padding: 0 20px 0 30px;
@@ -149,7 +149,7 @@ body{
     border: 2px solid #0C0C0C;
     line-height: 1.7;
     position: relative;
-    height: 110px;
+    height: auto;
     margin-bottom: 20px;
     -webkit-transition: all 0.3s ease-in-out;
 }
@@ -190,19 +190,19 @@ body{
     font-family: 'Bahnschrift', sans-serif;
 }
 .timeline-cell h3{
-    margin-top: -60px;
+    margin-top: -25px;
     font-family: 'Bahnschrift', sans-serif;
 }
 .timeline-cell h4{
     margin: 0;
-    margin-top: -30px;
-    margin-left: 43vw;
+    margin-top: -33px;
     color: white;
     font-family: 'Bahnschrift', sans-serif;
+    text-align: right;
 }
 
 .timeline-cell p{
-    margin-top: 25px;
+    margin-top: 5px;
     font-size: 18px;
     color: white;
     font-family: 'Bahnschrift', sans-serif;
