--- a/GameTemplate.css
+++ b/GameTemplate.css
@@ -157,8 +157,9 @@ button:hover{
 
 .footer{
   position: absolute;
+  margin-top: 6px;
   width: 100%;
-  height: 15.5vh;
+  height: 22.5vh;
   background-color:rgb(30, 30, 30);
   bottom: 0px;
 }
@@ -333,6 +334,7 @@ button:hover{
   object-fit: cover;
   height: 89vh;
   margin-left: 35vw;
+  margin-top: 0.3vh;
 
   border-color:rgba(245, 245, 245, 0);
   border-width: 5px;
